:art: Chore: ログイン状態でサインアップ画面にアクセスしようとした際のエラーメッセージの日本語対応を追加

--- a/config/locales/devise.ja.yml
+++ b/config/locales/devise.ja.yml
@@ -27,3 +27,4 @@ ja:
       user:
         invalid: "メールアドレスとパスワードが違います。"
         not_found_in_database: "メールアドレスまたはパスワードが違います。"
+        already_authenticated: "ログインしてるよ！"
