:globe_with_meridians: I18n: サインアップ時成功時の日本語訳を追加

--- a/config/locales/devise.ja.yml
+++ b/config/locales/devise.ja.yml
@@ -33,6 +33,7 @@ ja:
         signed_out: "ログアウトしました。"
     registrations: 
       user:
+        signed_up: "アカウントを登録しました。"
         updated: "プロフィールを更新しました。"
     failure:
       user:
