:globe_with_meridians: I18n: エラーメッセージの文言修正

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -1,12 +1,12 @@
 ja:
   activerecord:
     attributes:
-      playlist:
+      playlist: "プレイリスト"
         tracks: "トラック"
     errors:
       models:
         playlist:
           attributes:
             tracks:
-              tracks_count_within_limit: "の曲数は5曲以上20曲以下にしてください"
+              tracks_count_within_limit: "は5曲以上20曲以下にしてください"
 
