--- a/config/locales/devise.ja.yml
+++ b/config/locales/devise.ja.yml
@@ -36,6 +36,7 @@ ja:
       user:
         signed_up: "アカウントを登録しました。"
         updated: "プロフィールを更新しました。"
+        destroyed: "アカウントが正常に削除されました。"
     failure:
       user:
         invalid: "メールアドレスとパスワードが違います。"
