:globe_with_meridians: I18n: ログアウト時の翻訳を追加

--- a/config/locales/devise.ja.yml
+++ b/config/locales/devise.ja.yml
@@ -36,6 +36,7 @@ ja:
       user:
         signed_up: "アカウントを登録しました。"
         updated: "プロフィールを更新しました。"
+        already_signed_out: "ログアウトしました。"
         destroyed: "アカウントが正常に削除されました。"
     failure:
       user:
