:globe_with_meridians: I18n: Playlistモデルのtitleとdescriptionに翻訳を追加

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -3,6 +3,8 @@ ja:
     attributes:
       playlist:
         tracks: "トラック"
+        title: "TITLE"
+        description: "RECOMMEND"
     errors:
       models:
         playlist:
