:globe_with_meridians: I18n: フラッシュメッセージの日本語化

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -14,5 +14,14 @@ ja:
               tracks_count_within_limit: "は5曲以上20曲以下にしてください"
             title:
               too_long: "は20文字以内にしてください"
-
+  notices:
+    comment_added: "コメントしました。"
+    comment_failed: "コメントに失敗しました。"
+    tracks_deleted: "曲が削除されました。"
+    minimum_tracks: "プレイリストは5曲以上にしてください。"
+    playlist_updated: "プレイリストが更新されました。"
+    playlist_update_failed: "プレイリストの更新に失敗しました。"
+    playlist_deleted: "プレイリストが削除されました。"
+    new_playlist: "🎉 New playlist out now! 🎉"
+    auth_failed: "認証に失敗しました。もう一度お試しください。"
 
